feat(auth): add public-stats and public-groups endpoints for WelcomePage; feat(research-groups): add available-users endpoint; refactor: SonarQube fixes and test improvements